# inecontainer

./: AUTHORS  CMakeLists.txt  README.rst  inecontainer.pro
ic/: CMakeLists.txt  ic.cpp  ic.pro
inecontainer/: CMakeLists.txt  inecontainer.pro
inecontainer/include/: container_container.h  container_file_container.h  container_memory_container.h  container_status.h  container_status_base.h  container_virtual_file.h
inecontainer/source/: chunk.cpp  chunk.h  chunk_header.cpp  chunk_header.h  chunk_map_data.cpp  chunk_map_data.h  container_area.cpp  container_area.h  container_container.cpp  container_container_private.cpp  container_container_private.h  container_file_container.cpp  container_file_container_private.cpp  container_file_container_private.h  container_impl.cpp  container_impl.h  container_memory_container.cpp  container_memory_container_private.cpp  container_memory_container_private.h  container_status.cpp  container_status_base.cpp  container_virtual_file.cpp  container_virtual_file_private.cpp  container_virtual_file_private.h  file_header_chunk.cpp  file_header_chunk.h  fill_chunk.cpp  fill_chunk.h  free_space.cpp  free_space.h  free_space_data.cpp  free_space_data.h  free_space_tracker.cpp  free_space_tracker.h  ring_buffer.h  scatter_gather_list_segment.cpp  scatter_gather_list_segment.h  stream_chunk.cpp  stream_chunk.h  stream_data_chunk.cpp  (+5 more)
test/: CMakeLists.txt  test.pro  test_chunk.cpp  test_chunk.h  test_chunk_header.cpp  test_chunk_header.h  test_chunk_map_data.cpp  test_chunk_map_data.h  test_container_area.cpp  test_container_area.h  test_container_base.cpp  test_container_base.h  test_file_container.cpp  test_file_container.h  test_file_header_chunk.cpp  test_file_header_chunk.h  test_fill_chunk.cpp  test_fill_chunk.h  test_free_space.cpp  test_free_space.h  test_free_space_data.cpp  test_free_space_data.h  test_free_space_tracker.cpp  test_free_space_tracker.h  test_inecontainer.cpp  test_memory_container.cpp  test_memory_container.h  test_ring_buffer.cpp  test_ring_buffer.h  test_scatter_gather_list_segment.cpp  test_scatter_gather_list_segment.h  test_status.cpp  test_status.h  test_stream_data_chunk.cpp  test_stream_data_chunk.h  test_stream_start_chunk.cpp  test_stream_start_chunk.h  test_virtual_file.cpp  test_virtual_file.h
tools/: crc_table_calculator.py
